# turtelsim_automata

ros2_ws/: turtlesimAutomata.bash
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/turtlesim_automata/lib/turtlesim_automata/: turtlesim_automata_node
ros2_ws/install/turtlesim_automata/share/turtlesim_automata/: package.bash  package.dsv  package.ps1  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/install/turtlesim_automata/share/turtlesim_automata/: package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/turtlesim_automata/: CMakeLists.txt
ros2_ws/src/turtlesim_automata/src/: turtlesim_automata_node.cpp
